k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-backend
  template:
    metadata:
      labels:
        app: k8s-backend
    spec:
      containers:
        - name: k8s-backend
          image: k8s-backend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-backend-service
spec:
  selector:
    app: k8s-backend
  ports:
    - port: 3000
      targetPort: 3000
  type: ClusterIP
