k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-frontend
  template:
    metadata:
      labels:
        app: k8s-frontend
    spec:
      containers:
        - name: k8s-frontend
          image: k8s-frontend:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-frontend-service
spec:
  selector:
    app: k8s-frontend
  ports:
    - port: 80
      targetPort: 80
  type: NodePort
