k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-monitor-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: k8s-monitor.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: k8s-frontend-service
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: k8s-backend-service
                port:
                  number: 3000
